# legaldev

./: .coverage  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_hf.md  SECURITY.md  docker-compose.yml  feedback.jsonl  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: cache.py  config.py  corpus.py  ingest.py  legal_splitter.py  main.py  metrics.py  middleware.py  models.py  rag.py  reranker.py  store.py
chroma_db/: .corpus_version  chroma.sqlite3
chroma_db/1bb4435f-8207-4061-bfd9-f8b9fa2f8025/: index_metadata.pickle
chroma_db/3d7598f1-1fda-49fe-aab7-0580e0ad4ed5/: index_metadata.pickle
chroma_db/6c1ce5de-5a56-4676-b7e8-e71a9fb2fbf9/: index_metadata.pickle
chroma_db/f7f9c808-6385-4c47-952a-61840d556022/: index_metadata.pickle
docs/: hosting-checklist.md
docs/archive/: 2026-05-09-legaldev-design.md
docs/superpowers/plans/: 2026-05-09-legaldev-implementation.md  2026-05-11-ccii-auxiliary-search.md  2026-05-11-p02-output-formal.md  2026-05-15-p0-legaldev.md  2026-05-15-p1-legaldev.md  (+3 more)
tests/: conftest.py  test_api.py  test_api_keys.py  test_build_user_message.py  test_cache.py  test_concurrency.py  test_config.py  test_e2e.py  test_eval_model_flag.py  test_eval_sweep.py  test_ingest.py  test_injection.py  test_legal_splitter.py  test_metrics.py  test_middleware.py  test_models.py  test_rag.py  test_reranker.py  test_store.py
tools/: diagnose_ranking.py  diagnose_retrieval.py  eval_cases.yaml  eval_results.md  eval_retrieval.py
(+3 files in other folders)
