[project]
name = "legaldev"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.136.1",
    "uvicorn[standard]~=0.46.0",
    "langchain~=1.2.18",
    "langchain-community~=0.4.1",
    "langchain-chroma~=1.1.0",
    "langchain-groq~=1.1.2",
    "langchain-text-splitters~=1.1.2",
    "langchain-huggingface~=1.2.2",
    "chromadb~=1.5.9",
    "sentence-transformers~=5.5.0",
    "pypdf~=6.10.2",
    "python-dotenv~=1.2.2",
    "pydantic~=2.13.4",
    "pydantic-settings~=2.14.1",
    "httpx~=0.28.1",
    "slowapi~=0.1.9",
    "prometheus-fastapi-instrumentator~=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff>=0.4",
    "fpdf2>=2.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
